--- a/week1_session1_grundkonzepte.ipynb
+++ b/week1_session1_grundkonzepte.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "* **Instructor**: Jaime Rodríguez-Guerra, AG Volkamer, Charité (jaime.rodriguez@charite.de). \n",
     "* **Target audience**: Medical students from Charité\n",
-    "* **Course date**: July 2020\n",
+    "* **Course date**: February 2021\n",
     "\n",
     "> Extended from previous contributions by Jan Philipp Albrecht (j.p.albrecht@fu-berlin.de)."
    ]
@@ -336,7 +336,7 @@
     "\n",
     "The syntax for list definition uses square brackes `[ ]`, which surround the values separated by commas `,`:\n",
     "\n",
-    "![def_list.png](attachment:def_list.png)\n",
+    "![def_list.png](https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/def_list.png?raw=true)\n",
     "\n",
     "The code `my_list = [5, 10]` would therefore store `5` at first position, and `10` at second position.\n",
     "\n",
@@ -351,9 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mitte', 'kreuzberg', 'kreuzberg']\n"
+     ]
+    }
+   ],
    "source": [
     "neighborhoods = [\"mitte\", \"kreuzberg\", \"kreuzberg\"]\n",
     "print(neighborhoods)"
@@ -386,9 +394,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mitte\n",
+      "mitte\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c8f905ce4745>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighborhoods\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighborhoods\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "neighborhoods = [\"mitte\", \"kreuzberg\", \"neukölln\"]\n",
     "print(neighborhoods[0])\n",
@@ -396,7 +424,6 @@
     "index = 0\n",
     "print(neighborhoods[index])\n",
     "\n",
-    "asdasd = 0\n",
     "print(neighborhoods[3])"
    ]
   },
@@ -443,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +540,7 @@
     "They can be useful, for example, to assign properties to variables. Let's say, classmates and their age:\n",
     "\n",
     "\n",
-    "![def_dict.png](attachment:def_dict.png)\n",
+    "![def_dict.png](https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/def_dict.png?raw=true)\n",
     "\n",
     "\n",
     "Or, neighborhoods and the [number of cases as of 30.06.2020](https://www.berlin.de/lageso/gesundheit/infektionsepidemiologie-infektionsschutz/corona/tabelle-bezirke/):\n",
