--- a/week2_session2_images-MRI-dl.ipynb
+++ b/week2_session2_images-MRI-dl.ipynb
@@ -2,9 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in links: https://download.pytorch.org/whl/torch_stable.html\n",
+      "Collecting nibabel\n",
+      "  Downloading nibabel-3.2.1-py3-none-any.whl (3.3 MB)\n",
+      "\u001b[K     |████████████████████████████████| 3.3 MB 1.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting torch==1.5.1+cpu\n",
+      "  Downloading https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp38-cp38-linux_x86_64.whl (127.3 MB)\n",
+      "\u001b[K     |████████████████████████████████| 127.3 MB 4.2 MB/s eta 0:00:011   |██▊                             | 10.9 MB 2.4 MB/s eta 0:00:49     |███▏                            | 12.8 MB 2.4 MB/s eta 0:00:48\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.14 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from nibabel) (1.18.5)\n",
+      "Requirement already satisfied: packaging>=14.3 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from nibabel) (20.4)\n",
+      "Collecting future\n",
+      "  Using cached future-0.18.2.tar.gz (829 kB)\n",
+      "Requirement already satisfied: six in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from packaging>=14.3->nibabel) (1.15.0)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from packaging>=14.3->nibabel) (2.4.7)\n",
+      "Building wheels for collected packages: future\n",
+      "  Building wheel for future (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for future: filename=future-0.18.2-py3-none-any.whl size=491058 sha256=6c87dc5dd69155d3755d9cd5a2fc9b3ffe554cb3de44c96070435be26c475ecf\n",
+      "  Stored in directory: /home/jaime/.cache/pip/wheels/8e/70/28/3d6ccd6e315f65f245da085482a2e1c7d14b90b30f239e2cf4\n",
+      "Successfully built future\n",
+      "Installing collected packages: nibabel, future, torch\n",
+      "Successfully installed future-0.18.2 nibabel-3.2.1 torch-1.5.1+cpu\n"
+     ]
+    }
+   ],
    "source": [
     "# pre-requisites\n",
     "! pip install nibabel torch==1.5.1+cpu -f https://download.pytorch.org/whl/torch_stable.html"
@@ -73,13 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import required packages\n",
@@ -99,16 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = \"data/car.jpg\""
+    "!wget -q -O car.jpg https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/car.jpg?raw=true\n",
+    "image_path = \"car.jpg\""
    ]
   },
   {
@@ -120,9 +138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnidentifiedImageError",
+     "evalue": "cannot identify image file 'car.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-1c3d231274a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# loading the image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.conda/envs/ai_in_medicine/lib/python3.8/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   2956\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mmessage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maccept_warnings\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2957\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2958\u001b[0;31m     raise UnidentifiedImageError(\n\u001b[0m\u001b[1;32m   2959\u001b[0m         \u001b[0;34m\"cannot identify image file %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2960\u001b[0m     )\n",
+      "\u001b[0;31mUnidentifiedImageError\u001b[0m: cannot identify image file 'car.jpg'"
+     ]
+    }
+   ],
    "source": [
     "# loading the image\n",
     "image = Image.open(image_path)"
@@ -138,12 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO"
@@ -824,7 +850,9 @@
    },
    "outputs": [],
    "source": [
-    "mask = nib.load(\"data/binary_brain_mask.nii.gz\").get_data()"
+    "# MISSING!!!!!!!!!\n",
+    "!wget -O binary_brain_mask.nii.gz https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/binary_brain_mask.nii.gz?raw=true\n",
+    "mask = nib.load(\"binary_brain_mask.nii.gz\").get_data()"
    ]
   },
   {
@@ -2162,7 +2190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
