--- a/week1_session4_intro_to_ml_and_scikit_learn.ipynb
+++ b/week1_session4_intro_to_ml_and_scikit_learn.ipynb
@@ -1342,10 +1342,10 @@
     "<table>\n",
     "    <tr>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/confusion_matrix.png?raw=true\" width=\"500\" height=\"600\"/>\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/confusion_matrix.png?raw=true\" width=\"500\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/confusion_matrix_pregnancy.png?raw=true\" width=\"500\" height=\"600\"/>\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/confusion_matrix_pregnancy.png?raw=true\" width=\"500\" />\n",
     "        </td>\n",
     "    </tr>\n",
     "</table>\n",
