--- a/week1_session1_grundkonzepte.ipynb
+++ b/week1_session1_grundkonzepte.ipynb
@@ -336,7 +336,7 @@
     "\n",
     "The syntax for list definition uses square brackes `[ ]`, which surround the values separated by commas `,`:\n",
     "\n",
-    "![def_list.png](https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/def_list.png?raw=true)\n",
+    "![def_list.png](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/def_list.png)\n",
     "\n",
     "The code `my_list = [5, 10]` would therefore store `5` at first position, and `10` at second position.\n",
     "\n",
@@ -540,7 +540,7 @@
     "They can be useful, for example, to assign properties to variables. Let's say, classmates and their age:\n",
     "\n",
     "\n",
-    "![def_dict.png](https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/def_dict.png?raw=true)\n",
+    "![def_dict.png](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/def_dict.png)\n",
     "\n",
     "\n",
     "Or, neighborhoods and the [number of cases as of 30.06.2020](https://www.berlin.de/lageso/gesundheit/infektionsepidemiologie-infektionsschutz/corona/tabelle-bezirke/):\n",
