--- a/week1_session3_matplotlib.ipynb
+++ b/week1_session3_matplotlib.ipynb
@@ -28,75 +28,7 @@
    "source": [
     "- **Instructor**: Moritz Seiler, AG Ritter, Charité - Universitätsmedizin Berlin (moritz.seiler@charite.de)\n",
     "- **Target audience**: Medical students from Charité\n",
-    "- **Course date**: July 2020"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**First, please make sure, that you're using the Python 3.6 kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version go to the tab *Kernel* --> *Change Kernel* and select *Python 3.6*.\n",
-    "\n",
-    "**matplotlib Update:**<br>\n",
-    "The pre-installed version of the *matplotlib* in this environment is 3.0.0, but the following notebook requires **version 3.2.2**. Please update the *matplotlib* library by executing the following cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already up-to-date: matplotlib in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (3.2.2)\n",
-      "Requirement already satisfied, skipping upgrade: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from matplotlib) (2.4.7)\n",
-      "Requirement already satisfied, skipping upgrade: numpy>=1.11 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from matplotlib) (1.18.5)\n",
-      "Requirement already satisfied, skipping upgrade: python-dateutil>=2.1 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from matplotlib) (2.8.1)\n",
-      "Requirement already satisfied, skipping upgrade: cycler>=0.10 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied, skipping upgrade: kiwisolver>=1.0.1 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied, skipping upgrade: six>=1.5 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from python-dateutil>=2.1->matplotlib) (1.15.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install --upgrade matplotlib"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Please **restart the kernel** after the update. Go to the tab *Kernel* --> *Restart*. After the restart, you can check the version of your updated *matplotlib* library using the following command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.2.2'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import matplotlib\n",
-    "matplotlib.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If the output says '3.2.2' then we're good to go."
+    "- **Course date**: February 2021"
    ]
   },
   {
@@ -194,14 +126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See accompanying slide deck."
+    "See accompanying [slide deck](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/slides/week1_session4_intro_to_ml_and_scikit_learn.pdf)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Pratical"
+    "## 5. Practical"
    ]
   },
   {
@@ -238,7 +170,7 @@
     "import numpy as np\n",
     "\n",
     "# Read in the RKI Covid-19 data set\n",
-    "covid19 = pd.read_csv(\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/20200705_COVID19_RKI.csv?raw=true\")\n",
+    "covid19 = pd.read_csv(\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/20200705_COVID19_RKI.csv\")\n",
     "\n",
     "# Transform string into datetime format\n",
     "covid19['Meldedatum'] = pd.to_datetime(covid19['Meldedatum'])"
@@ -507,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For an installation of the *matplotlib* library, you have to enter the following command in the terminal."
+    "Matplotlib is available on Colab, but if you are using this from any other place, you may install it with the following command (copy it in a Code cell):"
    ]
   },
   {
