--- a/week1_session4_intro_to_ml_and_scikit_learn.ipynb
+++ b/week1_session4_intro_to_ml_and_scikit_learn.ipynb
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Download to Colab\n",
-    "!wget -q https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/diabetes.csv?raw=true -O diabetes.csv"
+    "!mkdir -p data; wget -q -P data https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/diabetes.csv"
    ]
   },
   {
@@ -163,12 +163,12 @@
    "outputs": [],
    "source": [
     "# load csv into a numpy array\n",
-    "data = np.loadtxt('diabetes.csv', delimiter=',', skiprows=1)\n",
-    "data_labels = np.loadtxt('diabetes.csv', dtype=str, delimiter=',', max_rows=1)\n",
+    "data = np.loadtxt('data/diabetes.csv', delimiter=',', skiprows=1)\n",
+    "data_labels = np.loadtxt('data/diabetes.csv', dtype=str, delimiter=',', max_rows=1)\n",
     "\n",
     "\n",
     "# load csv into a pandas dataframe\n",
-    "df = pd.read_csv('diabetes.csv')"
+    "df = pd.read_csv('data/diabetes.csv')"
    ]
   },
   {
@@ -1342,10 +1342,10 @@
     "<table>\n",
     "    <tr>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/confusion_matrix.png?raw=true\" width=\"500\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/confusion_matrix.png\" width=\"500\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/confusion_matrix_pregnancy.png?raw=true\" width=\"500\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/confusion_matrix_pregnancy.png\" width=\"500\" />\n",
     "        </td>\n",
     "    </tr>\n",
     "</table>\n",
