--- a/week1_session5_deep-learning.ipynb
+++ b/week1_session5_deep-learning.ipynb
@@ -20,130 +20,7 @@
    "source": [
     "* **Instructor**: Moritz Seiler, AG Ritter, Charité - Universitätsmedizin Berlin (moritz.seiler@charite.de) <br>\n",
     "* **Target audience**:  Medical students from Charité<br>\n",
-    "* **Course date**:  July 2020"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**First, please make sure, that you're using the Python 3.6 kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab *Kernel* --> *Change Kernel* and select *Python 3.6*.\n",
-    "\n",
-    "**TensorFlow Update:**<br>\n",
-    "The pre-installed version of the tensorflow in this environment is 1.1.0, but the following notebook requires version 2.0.0. Please update the tensorflow library by executing the following cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting tensorflow\n",
-      "  Downloading tensorflow-2.2.0-cp38-cp38-manylinux2010_x86_64.whl (516.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 516.3 MB 1.4 kB/s eta 0:00:012    |█████████                       | 146.2 MB 9.7 MB/s eta 0:00:39     |████████████████████████▌       | 395.3 MB 4.0 MB/s eta 0:00:30     |█████████████████████████████▍  | 474.9 MB 1.7 MB/s eta 0:00:25\n",
-      "\u001b[?25hCollecting opt-einsum>=2.3.2\n",
-      "  Downloading opt_einsum-3.2.1-py3-none-any.whl (63 kB)\n",
-      "\u001b[K     |████████████████████████████████| 63 kB 876 kB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting astunparse==1.6.3\n",
-      "  Downloading astunparse-1.6.3-py2.py3-none-any.whl (12 kB)\n",
-      "Collecting wrapt>=1.11.1\n",
-      "  Downloading wrapt-1.12.1.tar.gz (27 kB)\n",
-      "Requirement already satisfied, skipping upgrade: wheel>=0.26; python_version >= \"3\" in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from tensorflow) (0.34.2)\n",
-      "Collecting tensorflow-estimator<2.3.0,>=2.2.0\n",
-      "  Downloading tensorflow_estimator-2.2.0-py2.py3-none-any.whl (454 kB)\n",
-      "\u001b[K     |████████████████████████████████| 454 kB 5.7 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting protobuf>=3.8.0\n",
-      "  Downloading protobuf-3.12.2-cp38-cp38-manylinux1_x86_64.whl (1.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.3 MB 6.9 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: six>=1.12.0 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from tensorflow) (1.15.0)\n",
-      "Collecting termcolor>=1.1.0\n",
-      "  Downloading termcolor-1.1.0.tar.gz (3.9 kB)\n",
-      "Requirement already satisfied, skipping upgrade: numpy<2.0,>=1.16.0 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from tensorflow) (1.18.5)\n",
-      "Collecting tensorboard<2.3.0,>=2.2.0\n",
-      "  Downloading tensorboard-2.2.2-py3-none-any.whl (3.0 MB)\n",
-      "\u001b[K     |████████████████████████████████| 3.0 MB 4.6 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting scipy==1.4.1; python_version >= \"3\"\n",
-      "  Downloading scipy-1.4.1-cp38-cp38-manylinux1_x86_64.whl (26.0 MB)\n",
-      "\u001b[K     |████████████████████████████████| 26.0 MB 5.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting absl-py>=0.7.0\n",
-      "  Downloading absl-py-0.9.0.tar.gz (104 kB)\n",
-      "\u001b[K     |████████████████████████████████| 104 kB 1.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting google-pasta>=0.1.8\n",
-      "  Downloading google_pasta-0.2.0-py3-none-any.whl (57 kB)\n",
-      "\u001b[K     |████████████████████████████████| 57 kB 2.5 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting h5py<2.11.0,>=2.10.0\n",
-      "  Downloading h5py-2.10.0-cp38-cp38-manylinux1_x86_64.whl (2.9 MB)\n",
-      "\u001b[K     |████████████████████████████████| 2.9 MB 6.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting gast==0.3.3\n",
-      "  Downloading gast-0.3.3-py2.py3-none-any.whl (9.7 kB)\n",
-      "Collecting keras-preprocessing>=1.1.0\n",
-      "  Downloading Keras_Preprocessing-1.1.2-py2.py3-none-any.whl (42 kB)\n",
-      "\u001b[K     |████████████████████████████████| 42 kB 624 kB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting grpcio>=1.8.6\n",
-      "  Downloading grpcio-1.30.0-cp38-cp38-manylinux2010_x86_64.whl (3.0 MB)\n",
-      "\u001b[K     |████████████████████████████████| 3.0 MB 630 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: setuptools in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from protobuf>=3.8.0->tensorflow) (47.3.1.post20200616)\n",
-      "Collecting werkzeug>=0.11.15\n",
-      "  Downloading Werkzeug-1.0.1-py2.py3-none-any.whl (298 kB)\n",
-      "\u001b[K     |████████████████████████████████| 298 kB 3.9 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting google-auth-oauthlib<0.5,>=0.4.1\n",
-      "  Downloading google_auth_oauthlib-0.4.1-py2.py3-none-any.whl (18 kB)\n",
-      "Collecting markdown>=2.6.8\n",
-      "  Downloading Markdown-3.2.2-py3-none-any.whl (88 kB)\n",
-      "\u001b[K     |████████████████████████████████| 88 kB 4.4 MB/s  eta 0:00:01\n",
-      "\u001b[?25hCollecting google-auth<2,>=1.6.3\n",
-      "  Downloading google_auth-1.18.0-py2.py3-none-any.whl (90 kB)\n",
-      "\u001b[K     |████████████████████████████████| 90 kB 3.7 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting tensorboard-plugin-wit>=1.6.0\n",
-      "  Downloading tensorboard_plugin_wit-1.7.0-py3-none-any.whl (779 kB)\n",
-      "\u001b[K     |████████████████████████████████| 779 kB 5.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: requests<3,>=2.21.0 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from tensorboard<2.3.0,>=2.2.0->tensorflow) (2.24.0)\n",
-      "Collecting requests-oauthlib>=0.7.0\n",
-      "  Downloading requests_oauthlib-1.3.0-py2.py3-none-any.whl (23 kB)\n",
-      "Collecting pyasn1-modules>=0.2.1\n",
-      "  Downloading pyasn1_modules-0.2.8-py2.py3-none-any.whl (155 kB)\n",
-      "\u001b[K     |████████████████████████████████| 155 kB 4.6 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting rsa<5,>=3.1.4; python_version >= \"3\"\n",
-      "  Downloading rsa-4.6-py3-none-any.whl (47 kB)\n",
-      "\u001b[K     |████████████████████████████████| 47 kB 1.6 MB/s eta 0:00:011\n",
-      "\u001b[?25hCollecting cachetools<5.0,>=2.0.0\n",
-      "  Downloading cachetools-4.1.1-py3-none-any.whl (10 kB)\n",
-      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard<2.3.0,>=2.2.0->tensorflow) (2020.6.20)\n",
-      "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard<2.3.0,>=2.2.0->tensorflow) (1.25.9)\n",
-      "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard<2.3.0,>=2.2.0->tensorflow) (3.0.4)\n",
-      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard<2.3.0,>=2.2.0->tensorflow) (2.10)\n",
-      "Collecting oauthlib>=3.0.0\n",
-      "  Downloading oauthlib-3.1.0-py2.py3-none-any.whl (147 kB)\n",
-      "\u001b[K     |████████████████████████████████| 147 kB 5.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting pyasn1<0.5.0,>=0.4.6\n",
-      "  Downloading pyasn1-0.4.8-py2.py3-none-any.whl (77 kB)\n",
-      "\u001b[K     |████████████████████████████████| 77 kB 2.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hBuilding wheels for collected packages: wrapt, termcolor, absl-py\n",
-      "  Building wheel for wrapt (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for wrapt: filename=wrapt-1.12.1-cp38-cp38-linux_x86_64.whl size=78079 sha256=78634198aa41446205aa13d7899b160d7ef00671ca9164b3249cc5d6995a5883\n",
-      "  Stored in directory: /home/jaime/.cache/pip/wheels/5f/fd/9e/b6cf5890494cb8ef0b5eaff72e5d55a70fb56316007d6dfe73\n",
-      "  Building wheel for termcolor (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for termcolor: filename=termcolor-1.1.0-py3-none-any.whl size=4830 sha256=b0855267b671641c87f61fd1b49efedc27940a9a2f4d250d9b340c294b8b46e6\n",
-      "  Stored in directory: /home/jaime/.cache/pip/wheels/a0/16/9c/5473df82468f958445479c59e784896fa24f4a5fc024b0f501\n",
-      "  Building wheel for absl-py (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for absl-py: filename=absl_py-0.9.0-py3-none-any.whl size=121931 sha256=0a02cb526086c3fb4e38abee438b1e47893488278d41a1a8c890315b65739fd1\n",
-      "  Stored in directory: /home/jaime/.cache/pip/wheels/1d/10/8e/2f79b924179ff1e6510933d63eb851bea01054fff262343b7a\n",
-      "Successfully built wrapt termcolor absl-py\n",
-      "Installing collected packages: opt-einsum, astunparse, wrapt, tensorflow-estimator, protobuf, termcolor, werkzeug, pyasn1, pyasn1-modules, rsa, cachetools, google-auth, oauthlib, requests-oauthlib, google-auth-oauthlib, markdown, grpcio, tensorboard-plugin-wit, absl-py, tensorboard, scipy, google-pasta, h5py, gast, keras-preprocessing, tensorflow\n",
-      "  Attempting uninstall: scipy\n",
-      "    Found existing installation: scipy 1.5.0\n",
-      "    Uninstalling scipy-1.5.0:\n",
-      "      Successfully uninstalled scipy-1.5.0\n",
-      "Successfully installed absl-py-0.9.0 astunparse-1.6.3 cachetools-4.1.1 gast-0.3.3 google-auth-1.18.0 google-auth-oauthlib-0.4.1 google-pasta-0.2.0 grpcio-1.30.0 h5py-2.10.0 keras-preprocessing-1.1.2 markdown-3.2.2 oauthlib-3.1.0 opt-einsum-3.2.1 protobuf-3.12.2 pyasn1-0.4.8 pyasn1-modules-0.2.8 requests-oauthlib-1.3.0 rsa-4.6 scipy-1.4.1 tensorboard-2.2.2 tensorboard-plugin-wit-1.7.0 tensorflow-2.2.0 tensorflow-estimator-2.2.0 termcolor-1.1.0 werkzeug-1.0.1 wrapt-1.12.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install --upgrade tensorflow"
+    "* **Course date**:  February 2021"
    ]
   },
   {
@@ -348,7 +225,7 @@
     "import numpy as np\n",
     "\n",
     "# Read the Diabetes data set\n",
-    "diabetes = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/diabetes.csv?raw=true')"
+    "diabetes = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/diabetes.csv')"
    ]
   },
   {
