--- a/week2_session2_images-MRI-dl.ipynb
+++ b/week2_session2_images-MRI-dl.ipynb
@@ -1,43 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in links: https://download.pytorch.org/whl/torch_stable.html\n",
-      "Collecting nibabel\n",
-      "  Downloading nibabel-3.2.1-py3-none-any.whl (3.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 3.3 MB 1.9 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting torch==1.5.1+cpu\n",
-      "  Downloading https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp38-cp38-linux_x86_64.whl (127.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 127.3 MB 4.2 MB/s eta 0:00:011   |██▊                             | 10.9 MB 2.4 MB/s eta 0:00:49     |███▏                            | 12.8 MB 2.4 MB/s eta 0:00:48\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.14 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from nibabel) (1.18.5)\n",
-      "Requirement already satisfied: packaging>=14.3 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from nibabel) (20.4)\n",
-      "Collecting future\n",
-      "  Using cached future-0.18.2.tar.gz (829 kB)\n",
-      "Requirement already satisfied: six in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from packaging>=14.3->nibabel) (1.15.0)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /home/jaime/.conda/envs/ai_in_medicine/lib/python3.8/site-packages (from packaging>=14.3->nibabel) (2.4.7)\n",
-      "Building wheels for collected packages: future\n",
-      "  Building wheel for future (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for future: filename=future-0.18.2-py3-none-any.whl size=491058 sha256=6c87dc5dd69155d3755d9cd5a2fc9b3ffe554cb3de44c96070435be26c475ecf\n",
-      "  Stored in directory: /home/jaime/.cache/pip/wheels/8e/70/28/3d6ccd6e315f65f245da085482a2e1c7d14b90b30f239e2cf4\n",
-      "Successfully built future\n",
-      "Installing collected packages: nibabel, future, torch\n",
-      "Successfully installed future-0.18.2 nibabel-3.2.1 torch-1.5.1+cpu\n"
-     ]
-    }
-   ],
-   "source": [
-    "# pre-requisites\n",
-    "! pip install nibabel torch==1.5.1+cpu -f https://download.pytorch.org/whl/torch_stable.html"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,16 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -q -O car.jpg https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/car.jpg?raw=true\n",
-    "image_path = \"car.jpg\""
+    "!mkdir -p data; wget -q -P data https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/car.jpg\n",
+    "image_path = \"data/car.jpg\""
    ]
   },
   {
@@ -841,18 +795,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-9283c6c0c35b>:3: DeprecationWarning: get_data() is deprecated in favor of get_fdata(), which has a more predictable return type. To obtain get_data() behavior going forward, use numpy.asanyarray(img.dataobj).\n",
+      "\n",
+      "* deprecated from version: 3.0\n",
+      "* Will raise <class 'nibabel.deprecator.ExpiredDeprecationError'> as of version: 5.0\n",
+      "  mask = nib.load(\"binary_brain_mask.nii.gz\").get_data()\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# MISSING!!!!!!!!!\n",
-    "!wget -O binary_brain_mask.nii.gz https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/binary_brain_mask.nii.gz?raw=true\n",
-    "mask = nib.load(\"binary_brain_mask.nii.gz\").get_data()"
+    "!mkdir -p data; wget -q -P data https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/binary_brain_mask.nii.gz\n",
+    "mask = nib.load(\"data/binary_brain_mask.nii.gz\").get_fdata()"
    ]
   },
   {
@@ -1185,6 +1145,7 @@
     }
    ],
    "source": [
+    "!mkdir -p data; wget -q -P data https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/cnn_params.h5\n",
     "net.load_state_dict(torch.load(\"data/cnn_params.h5\", map_location='cpu'), strict=False)\n",
     "# we need to set the model to 'evaluation' mode to turn off dropout during prediction\n",
     "net.eval()"
@@ -1841,62 +1802,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'nibabel.nifti1.Nifti1Header'> object, endian='<'\n",
-      "sizeof_hdr      : 348\n",
-      "data_type       : b''\n",
-      "db_name         : b''\n",
-      "extents         : 0\n",
-      "session_error   : 0\n",
-      "regular         : b'r'\n",
-      "dim_info        : 0\n",
-      "dim             : [  3 193 229 193   1   1   1   1]\n",
-      "intent_p1       : 0.0\n",
-      "intent_p2       : 0.0\n",
-      "intent_p3       : 0.0\n",
-      "intent_code     : none\n",
-      "datatype        : float64\n",
-      "bitpix          : 64\n",
-      "slice_start     : 0\n",
-      "pixdim          : [1. 1. 1. 1. 0. 0. 0. 0.]\n",
-      "vox_offset      : 0.0\n",
-      "scl_slope       : nan\n",
-      "scl_inter       : nan\n",
-      "slice_end       : 0\n",
-      "slice_code      : unknown\n",
-      "xyzt_units      : 2\n",
-      "cal_max         : 0.0\n",
-      "cal_min         : 0.0\n",
-      "slice_duration  : 0.0\n",
-      "toffset         : 0.0\n",
-      "glmax           : 0\n",
-      "glmin           : 0\n",
-      "descrip         : b''\n",
-      "aux_file        : b''\n",
-      "qform_code      : scanner\n",
-      "sform_code      : unknown\n",
-      "quatern_b       : 0.0\n",
-      "quatern_c       : 0.0\n",
-      "quatern_d       : 0.0\n",
-      "qoffset_x       : -96.0\n",
-      "qoffset_y       : -132.0\n",
-      "qoffset_z       : -78.0\n",
-      "srow_x          : [0. 0. 0. 0.]\n",
-      "srow_y          : [0. 0. 0. 0.]\n",
-      "srow_z          : [0. 0. 0. 0.]\n",
-      "intent_name     : b''\n",
-      "magic           : b'n+1'\n"
+     "ename": "NameError",
+     "evalue": "name 'nib' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-c196a97bde72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# first we load the image using the nibabel (nib) library\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'wget -q https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/MRI_subject.nii.gz'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnifti\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"MRI_subject.nii.gz\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# we can find meta information in the header of the object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnifti\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nib' is not defined"
      ]
     }
    ],
    "source": [
     "# first we load the image using the nibabel (nib) library\n",
+    "!mkdir -p data; wget -q -P data https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/MRI_subject.nii.gz\n",
     "nifti = nib.load(\"data/MRI_subject.nii.gz\")\n",
     "# we can find meta information in the header of the object\n",
     "print(nifti.header)"
@@ -1914,7 +1837,7 @@
    "outputs": [],
    "source": [
     "# in order to access the data we can use the object's get_data() function\n",
-    "mri_data = nifti.get_data()"
+    "mri_data = nifti.get_fdata()"
    ]
   },
   {
