--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -206,7 +206,7 @@
     "\n",
     "The `pandas` library has two main containers of data, the `DataFrame` and the `Series`. The `DataFrame` is used more than the `Series`, so let’s take a look at its components.\n",
     "\n",
-    "![DataFrame anatomy](https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/images/dataframe_anatomy.png?raw=true)\n",
+    "![DataFrame anatomy](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/dataframe_anatomy.png)\n",
     "\n",
     "Figure source: https://medium.com/dunder-data/selecting-subsets-of-data-in-pandas-6fcd0170be9c"
    ]
@@ -665,7 +665,7 @@
    "outputs": [],
    "source": [
     "# `read_csv` takes paths in your computer, but also Internet URLs!\n",
-    "data = pd.read_csv(\"https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/20200705_COVID19_RKI_Berlin.csv?raw=true\", delimiter=',')"
+    "data = pd.read_csv(\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/20200705_COVID19_RKI_Berlin.csv\", delimiter=',')"
    ]
   },
   {
