--- a/week2_session1_cadd_exercise.ipynb
+++ b/week2_session1_cadd_exercise.ipynb
@@ -110,11 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!pip install condacolab\n",
+    "import condacolab\n",
     "condacolab.install()"
    ]
   },
@@ -342,7 +343,7 @@
    "source": [
     "# Read activity data for EGFR into a pandas dataframe named df\n",
     "#################### <-- insert code below\n",
-    "df = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/egfr_chembl25.csv?raw=true')\n",
+    "df = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/egfr_chembl25.csv')\n",
     "display(df.head())\n",
     "df.info()\n",
     "#################### <-- insert code above"
@@ -1106,7 +1107,7 @@
    "source": [
     "# load data and assign maccs keys \n",
     "####################\n",
-    "df2 = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/blob/update-2021.02/data/egfr_candidates.csv?raw=true')\n",
+    "df2 = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/egfr_candidates.csv')\n",
     "add_mols_and_maccs(df2)\n",
     "display(df2)\n",
     "####################"
